k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cartcraft
  labels:
    name: cartcraft
    environment: production
    project: cartcraft
