k8s/apiGateWayNodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: cartcraft

spec:
  selector:
    app: api-gateway

  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30080

  type: NodePort
