k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cartcraft-ingress
  namespace: cartcraft

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - buyer.cartcraftio.in
        - seller.cartcraftio.in
        - admin.cartcraftio.in
      secretName: cartcraft-tls

  rules:

    - host: buyer.cartcraftio.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cc-buyer-service
                port:
                  number: 80

    - host: seller.cartcraftio.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cc-seller-service
                port:
                  number: 80

    - host: admin.cartcraftio.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cc-admin-service
                port:
                  number: 80

    - host: api.cartcraftio.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 4000

# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
